// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imagenes con nuestro useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn animate__delay-1"
  >
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="goku"
      url="https://localhost/img.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrar el componente correctamente  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn animate__delay-1"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash animate__delay-1"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
